[package]
name = "led_plaque"
version = "0.1.0"
authors = ["Hugo Fernandes <hugofernandes2003@outlook.fr>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "led_plaque"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std"]
std = ["esp-idf-svc/alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

experimental = ["esp-idf-svc/experimental"]

[dependencies]
xdevs-no-std = {version="0.2.1", features=["std"] }
rand="0.8.5"

log = { version = "0.4", default-features = false }
anyhow = "1"
esp-idf-svc = { version = "0.48", default-features = false }


[build-dependencies]
embuild = "0.33.0"

