[package]
name = "led_plaque"
version = "0.1.0"
authors = ["Hugo Fernandes <hugofernandes2003@outlook.fr>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "led_plaque"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std"]
std = ["esp-idf-svc/alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]

experimental = ["esp-idf-svc/experimental"]



[package.metadata.docs.rs]
features = ["esp32c6"]
targets  = ["riscv32imac-unknown-none-elf"]


[dependencies]
xdevs-no-std = {version="0.2.1", features=["std"] }
rand="0.8.5"

log = { version = "0.4", default-features = false }
anyhow = "1"

esp-idf-hal = {version="0.45.2", features =["rmt-legacy"]}
esp-idf-svc = "0.51.0"
esp-hal-smartled = {version ="0.14.0", features = ["esp32c6"]}
smart-leds = "0.4.0"


[dev-dependencies]


[build-dependencies]
embuild = "0.33.0"

